Fixed line wrapping issue for BLOC strings

--- a/blocdemo/static/styles.scss
+++ b/blocdemo/static/styles.scss
@@ -451,6 +451,7 @@ button {
 .card-body {
 	padding: 1rem 1.25rem;
 	font-size: 0.875rem;
+	overflow-wrap: break-word;
 }
 
 .card-footer {
